# homelab_mcp

./: .gitignore  README.md
.github/actions/build-mcp-image/: action.yml
.github/workflows/: build-domain.yml  build-monolith.yml  pypi-publish.yml  release-domain.yml  release-monolith.yml
docs/: homelab-mcp-migration-plan.md  public-openapi-mirror.md
docs/TSGs/Operations/: phase-0-5-source-lift.md
docs/migration/: inherited-tool-bugs.md  inventory-history.json  migration-plan.md  phase-1-plus-plan.md  tool-inventory.json
mcp/: .lift-manifest.json  Dockerfile  Dockerfile.domain  pyproject.toml
mcp/src/homelab_mcp/: _runtime.py  app.py  audit.py  clients.py  entrypoints.py  http_app.py  main.py  policy.py  registry.py  server.py  settings.py
mcp/src/homelab_mcp/tools/: __init__.py  control.py  homeauto.py  media.py  network.py  platform.py
mcp/tests/: conftest.py  test_architecture_refactor_contract.py  test_audit_status.py  test_entrypoints.py  test_http_app.py  test_no_homelab_specifics_in_source.py  test_openapi_mirror.py  test_readonly_enforcement.py  test_settings_env_contract.py
tools/: lift_phase_0_5.py  phase_1_0_split_server.py  validate_inventory.py  verify_lift.py
