[project]
name = "homelab-mcp"
version = "0.1.0"
description = "All-in-one MCP server for homelab services"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "dirigera>=1.2.7",
    "pyatv>=0.16.0",
    "aiounifi>=83,<=85",
]

[project.optional-dependencies]
# Required to drive bundle composition via a YAML config file. The CSV
# env (HOMELAB_MCP_BUNDLE_DOMAINS) does not need PyYAML.
bundle = ["pyyaml>=6.0"]

[project.scripts]
# Bundle entry: registers all five domains. Drop-in for the
# pre-Phase-1.0 monolith console script.
homelab-mcp = "homelab_mcp.server:main"
# Phase 1.6 bundle multiplexer: registers the subset of domains
# resolved from HOMELAB_MCP_BUNDLE_DOMAINS (CSV) or
# HOMELAB_MCP_BUNDLE_CONFIG (YAML), falling back to all five.
homelab-mcp-bundle = "homelab_mcp.entrypoints:_main_bundle"
# Per-domain entry points (Phase 1.1+): each registers exactly one
# tools/{domain} module so the resulting server exposes only that
# domain's tools.
homelab-mcp-platform = "homelab_mcp.entrypoints:_main_platform"
homelab-mcp-media = "homelab_mcp.entrypoints:_main_media"
homelab-mcp-network = "homelab_mcp.entrypoints:_main_network"
homelab-mcp-homeauto = "homelab_mcp.entrypoints:_main_homeauto"
homelab-mcp-control = "homelab_mcp.entrypoints:_main_control"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homelab_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
